# JamMateBackend

./: .gitignore  README.md  VERSION  agent.md  pyproject.toml
.claude/: instructions.md
demos/: v2_10_28_minimal_demo.mid  v2_10_8_all_the_things_you_are_medium_swing_texture_piano_audit.md  v2_10_8_autumn_leaves_medium_swing_demo.mid  v2_10_8_autumn_leaves_medium_swing_texture_piano_audit.md  v2_10_8_medium_swing_texture_method_audit_report.md  v2_10_8_medium_swing_texture_method_audit_summary.json  v2_10_8_minimal_demo.mid  v2_3_13_agent_autumn_leaves_medium_swing_132.mid  v2_3_14_minimal_demo.mid  v2_3_17_agent_autumn_leaves_medium_swing_132.mid  v2_3_17_agent_blue_bossa_bossa_nova_120.mid  v2_3_17_minimal_demo.mid  v2_3_9_blue_bossa_minor_altered_pipeline_demo.mid  v2_3_9_blue_bossa_minor_altered_pipeline_demo_audit_summary.json  v2_3_9_demo_audit_pipeline_manifest.json  v2_3_9_minimal_swing_pipeline_smoke_demo_audit_summary.json  v2_3_9_minor_turnaround_altered_pipeline_fixture_demo.mid  v2_3_9_minor_turnaround_altered_pipeline_fixture_demo_audit_summary.json  v2_3_9_misty_jazz_ballad_upper_structure_altered_pipeline_demo.mid  v2_3_9_misty_jazz_ballad_upper_structure_altered_pipeline_demo_audit_summary.json  v2_4_11_direct_inline_wins_contract_281194d330bf_bossa_nova_120.mid  v2_4_13_direct_blue_bossa_6015a084529c_bossa_nova_132.mid  v2_4_13_direct_fly_me_to_the_moon_91dcd6e54fe6_medium_swing_126.mid  v2_4_13_direct_misty_d9cbb07f0b27_jazz_ballad_76.mid  v2_4_4_direct_harmonyos_inline_blue_bossa_smoke_94761bbd8fd5_bossa_nova_120.mid  v2_4_6_direct_harmonyos_inline_contract_smoke_c95ad9c81571_bossa_nova_118.mid  (+416 more)
(+1027 files in other folders)
