[project]
name = "jammate-engine"
version = "2.4.11"
description = "JamMatePyEngineV2 Agent Terminal Chat Context Controls"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
jammate-agent-chat = "jammate_agent.cli.terminal_chat:main"
jammate-agent-traces = "jammate_agent.cli.trace_viewer:main"
